--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "an": "~0.0.0",
-    "typeahead.an": "~0.0.1"
+    "typeahead.an": "~0.0.1",
+    "ngraph.graph": "0.0.2",
+    "npmgraphbuilder": "0.0.1",
+    "ngraph.fabric": "0.0.1"
   }
 }
