--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "an": "~0.0.0",
+    "ngraph.events": "0.0.3",
     "ngraph.graph": "0.0.2",
     "ngraph.svg": "0.0.2",
     "ngraph.three": "0.0.6",
