--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "an": "0.0.6",
     "angular": "^1.2.10",
+    "js-md5": "^0.1.2",
     "ngraph.events": "0.0.3",
     "ngraph.graph": "0.0.2",
     "ngraph.svg": "0.0.5",
@@ -45,7 +46,7 @@
     "npmgraphbuilder": "0.0.1",
     "simplesvg": "0.0.2",
     "three2stl": "0.0.1",
-    "typeahead.an": "~0.0.1",
-    "twitter-bootstrap-3.0.0": "^3.0.0"
+    "twitter-bootstrap-3.0.0": "^3.0.0",
+    "typeahead.an": "~0.0.1"
   }
 }
