--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npmgraph.an",
   "version": "0.0.3",
-  "description": "Experiment: how npmgraph could be implemented in declarative way?",
+  "description": "Visualization of npm dependencies",
   "main": "main.js",
   "scripts": {
     "start": "gulp --port 31337",
