Made scroll less sensitive

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "js-md5": "^0.1.2",
     "ngraph.events": "0.0.3",
     "ngraph.graph": "0.0.10",
-    "ngraph.svg": "0.0.13",
+    "ngraph.merge": "0.0.1",
+    "ngraph.svg": "0.0.15",
     "ngraph.three": "0.0.11",
     "npmgraphbuilder": "0.0.3",
     "simplesvg": "0.0.10",
