--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "npmgraph.an",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Visualization of npm dependencies",
-  "main": "main.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "gulp --port 31337",
-    "deploy": "./deploy-travis.sh",
-    "build": "gulp build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "./deploy.sh",
     "test": "echo \"TODO implement me\" && exit 0"
-  },
-  "browserify": {
-    "transform": [
-      "brfs"
-    ]
   },
   "keywords": [
     "npm",
@@ -25,31 +22,19 @@
     "url": "https://github.com/anvaka/npmgraph.an"
   },
   "devDependencies": {
-    "brfs": "^1.1.2",
-    "browserify": "^3.33.0",
-    "connect-livereload": "^0.3.2",
-    "express": "^3.5.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-less": "^1.2.3",
-    "gulp-util": "^2.2.14",
-    "tiny-lr": "0.0.5",
-    "yargs": "^1.2.1",
-    "gulp": "^4.0.2"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "vite": "^6.0.0"
   },
   "dependencies": {
-    "an": "0.0.7",
-    "angular": "1.2.29",
     "js-md5": "^0.1.2",
     "ngraph.events": "0.0.3",
     "ngraph.graph": "0.0.10",
-    "ngraph.merge": "0.0.1",
     "ngraph.svg": "0.0.15",
     "ngraph.three": "0.0.11",
-    "npm-package-arg": "^4.2.0",
-    "npmgraphbuilder": "2.2.0",
+    "semver": "^7.6.0",
     "simplesvg": "0.0.10",
     "three2stl": "0.0.1",
-    "twitter-bootstrap-3.0.0": "^3.0.0",
-    "typeahead.an": "~0.0.1"
+    "vue": "^3.5.0",
+    "vue-router": "^4.5.0"
   }
 }
